formver.compiler-plugin/testData/diagnostics/conversion/nameing/predicate_method_shared_consistency_error.kt
class A(val x: Int)

fun <!VIPER_TEXT!>shared<!>() {}

fun <!VIPER_TEXT!>predicateMethodSharedConsistencyError<!>(a: A) {
    shared()
    a.x
}
